--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
+    "classnames": "^2.2.5",
     "cross-env": "^5.1.3",
     "eslint": "^4.18.1",
     "eslint-config-airbnb": "^16.1.0",
