--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,7 @@
 [ignore]
 <PROJECT_ROOT>/node_modules/jsonlint-lines-primitives
 <PROJECT_ROOT>/node_modules/material-ui/test-utils
+<PROJECT_ROOT>/node_modules/mapbox-gl/src/data/array_types.js
 
 [include]
 
